Cambio de idioma

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/html">
     <head>
         <title>Tutti Frescuni</title>
-        <meta name="description" content="Disfruta sólo de lo mejores productos de temporada. ¡Con mejor sabor y más baratos!">
+        <meta name="description" content="Disfruta de las mejores frutas y verduras de temporada">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <!--Fonts-->
@@ -24,7 +24,6 @@
         </script>
     </head>
     <body>
-        
         <div class="tutti-frescuni">
             <div id="loading"></div>
             <div id="header"></div>            
