Optimización con r.js
Hemos pasado de 670kb a 206kb implementando el optimizador de Require.js

--- a/web/index.html
+++ b/web/index.html
@@ -47,6 +47,6 @@
         loads a script that will have a module ID of 'boot'
         http://requirejs.org/docs/api.html
         -->
-        <script data-main="js/boot" type="text/javascript" src="js/libs/require.js"></script>
+        <script data-main="js/boot-built" type="text/javascript" src="js/libs/require.js"></script>
     </body>
 </html>
