--- a/web/index.html
+++ b/web/index.html
@@ -41,8 +41,8 @@
             <div id="credits"></div>
         </div>
         <!--Library Spin.js-->
-        <script type="text/javascript" src="js/libs/spin.min.js"></script>
-        <script type="text/javascript" src="js/libs/spin.config.js"></script>
+        <script type="text/javascript" src="js/libs/spin.js"></script>
+        <script type="text/javascript" src="js/libs/spinConfig.js"></script>
         <!--This sets the baseUrl to the "scripts" directory, and
         loads a script that will have a module ID of 'boot'
         http://requirejs.org/docs/api.html
